# opinion-miner

./: .gitignore  Cargo.toml  README.md  communicator.py  opinion-miner.py  pyproject.toml  requirements.txt
src/: cli.rs  main.rs
src/fetchers/: dev_to_fetcher.rs  mod.rs
