[tool.poetry]
name = "opinion-miner"
version = "0.1.0"
description = "Deps for ploting results"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modelz-llm = "^23.7.4"
huggingface-hub = "^0.20.3"
numpy = "^1.26.3"
torch = "^2.1.2"
transformers = "^4.37.2"
accelerate = "^0.26.1"
openai = "^1.10.0"
requests = "^2.31.0"
matplotlib = "^3.8.2"
graceful-shutdown = "^0.1.2"
bs4 = "^0.0.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
